# DataForge-AI

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  run_dev.ps1
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  start.sh
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: health.py
backend/app/core/: config.py  database.py  logging.py
backend/app/features/analytics/: router.py  service.py
backend/app/features/clean/: router.py  service.py
backend/app/features/dedup/: router.py  service.py  simhash.py
backend/app/features/documents/: crud.py  models.py  router.py  schemas.py
backend/app/features/export/: router.py  service.py
backend/app/features/ingest/: base.py  http_collector.py  router.py  service.py
backend/app/features/pipeline/: router.py  service.py
backend/app/features/quality/: router.py  service.py
backend/migrations/: env.py
backend/migrations/versions/: 481e1cf491b6_create_documents_table.py
backend/tests/: conftest.py  test_analytics.py  test_clean.py  test_dedup.py  test_documents.py  test_e2e.py  test_export.py  test_health.py  test_ingest.py  test_pipeline.py  test_quality.py
frontend/: Dockerfile
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/health/: page.tsx
